fix the overlapping when reach the limit messages

--- a/frontend/src/css/chatContainer.css
+++ b/frontend/src/css/chatContainer.css
@@ -1,8 +1,10 @@
 .chatContainer {
   background-color: rgb(244, 255, 255);
-  display: grid;
-  grid-template-rows: 70px 1fr 70px;
+  /* display: grid; */
+  /* grid-template-rows: 70px 1fr 70px; */
   border-left: solid 0.5px rgb(190, 190, 190);
+  padding: 70px 0;
+  position: relative;
 }
 
 .chatContainerTop {
@@ -12,6 +14,11 @@
   align-items: center;
   gap: 10px;
   padding: 0 10px;
+  height: 70px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
 }
 
 .chatMiddleContainer {
@@ -54,7 +61,13 @@
   padding-top: 3.5rem;
   justify-content: end;
   overflow: scroll;
-  max-height: 80vh;
+  /* max-height: 80vh; */
+  /* height: 80vh; */
+  position: absolute;
+  top: 70px;
+  bottom: 70px;
+  left: 0;
+  right: 0;
 }
 
 .chatContainerMiddle::-webkit-scrollbar {
@@ -89,22 +102,45 @@
 }
 
 /* BOTTOM CONTAINER */
+/* .chatContainerBottom {
+  background-color: rgb(255, 255, 255);
+  display: flex;
+  align-items: center;
+  padding: 0 20px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 70px;
+} */
 .chatContainerBottom {
   background-color: rgb(255, 255, 255);
   display: flex;
   align-items: center;
   padding: 0 20px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 70px;
 }
 
-.chatleftDiv {
+/* .chatleftDiv {
   display: flex;
   gap: 10px;
-}
+} */
 
 .chatMiddleDiv {
   flex: 1;
   padding: 0 20px;
   margin: 0 10px;
+  display: flex;
+  gap: 10px;
+}
+
+.chatRightDiv {
+  background-color: transparent;
+  border: 0;
 }
 
 #messageInput {
@@ -119,6 +155,6 @@
 }
 
 .chatContainerBottom ion-icon {
-  height: 1.5rem;
-  width: 1.5rem;
+  height: 1.6rem;
+  width: 1.6rem;
 }
